# bookbuilder

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  __init__.py  convert.py  pyproject.toml  pytest.ini  requirements.txt  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.windsurf/workflows/: create-feature-pr.md  create-tests.md
bookbuilder/: __main__.py  cleanup.py  cli.py  combine.py  convert.py  formats.py  utils.py
bookbuilder/resources/: __init__.py  default-config.json
examples/: bookbuilder-config.json  fullBookOrderPdfs.json  shortBookOrderPdfs.json
resources/: Python-Testing-Cheat-Sheet.md
tests/: __init__.py  conftest.py  test_cleanup.py  test_combine.py  test_convert.py  test_details_processing.py  test_integration.py  test_utils.py  verify_full_bleed.py
